feat: add preset parameters and refactor tool registration API (#62)